--- a/NoteAppDAT/src/main/webapp/darkmode.css
+++ b/NoteAppDAT/src/main/webapp/darkmode.css
@@ -89,8 +89,8 @@ body {
     background-color: var(--dark-grey);
     border-radius: 10px;
     box-shadow: 0px 5px 10px var(--dark-shadow);
-    padding: 30px;
-    margin-bottom: 15px;
+    padding: 15px;
+    margin-bottom: 10px;
     grid-auto-flow: row;
 }
 
@@ -132,8 +132,6 @@ body {
 .basic-grid {
     display: flex;
     flex-wrap: wrap;
-    
-    padding-bottom: 40px;
 }
 
 .card {   
@@ -294,7 +292,7 @@ body {
 }
 
 .ui-widget-content {
-    background: none;
+    background: var(--darker-grey);
     border: none;
     color: unset;
 }
