--- a/NoteAppDAT/src/main/webapp/darkmode.css
+++ b/NoteAppDAT/src/main/webapp/darkmode.css
@@ -211,31 +211,6 @@ button.ui-button {
     padding-bottom: 80px;
 }
 
-/* LOG SIGN IN BUTTONS */
-.log-sign-button {
-	box-shadow: 3px 5px 14px 10px #1c1b18;
-	background:linear-gradient(to bottom, #e0e0e0 5%, #a3a3a3 100%);
-	background-color:#e0e0e0;
-	border-radius:18px;
-	border:4px solid #333029;
-	display:inline-block;
-	cursor:pointer;
-	color:#2c2e27;
-	font-family:Trebuchet MS;
-	font-size:23px;
-	font-weight:bold;
-	text-decoration:none;
-	text-shadow:-2px 2px 4px #ffffff;
-}
-.log-sign-button:hover {
-	background:linear-gradient(to bottom, #a3a3a3 5%, #e0e0e0 100%);
-	background-color:#a3a3a3;
-}
-.log-sign-button:active {
-	position:relative;
-	top:1px;
-}
-
 
 /* END OF LOG SIGN IN BUTTONS */
 
@@ -405,5 +380,10 @@ button.ui-button {
 		transform: translatey(0px);
 	}
 }
+.ui-button.customButton {
+    background: #333333 url("/NoteAppDAT/javax.faces.resource/images/ui-bg_diagonals-thick_8_333333_40x40.png.xhtml?ln=primefaces-black-tie") 50% 50% repeat;
+}
 
-
+.button-footer {
+    padding-top: 20px;
+}
